--- a/digiart/src/pages/login/style.css
+++ b/digiart/src/pages/login/style.css
@@ -6,8 +6,8 @@ body {
     background-color: rgb(27, 25, 6);
 }
 
-.signup-container {
-    background: linear-gradient(to top right, #0717f4, #f90754e3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+.login-container {
+    background: linear-gradient(to top right, #0717f4, #f90754e3); 
     padding: 2rem;
     width: 80%;
     margin: 3rem auto;
@@ -15,6 +15,7 @@ body {
     border-radius: 15px;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
 }
 
 .quote {
@@ -26,7 +27,7 @@ body {
 }
 
 
-.signup-img {
+.login-img {
     width: 80%;
     filter: drop-shadow(-15px 25px 10px #000);
 }
