--- a/digiart/src/pages/signup/style.css
+++ b/digiart/src/pages/signup/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body {
-    background-color: rgb(27, 25, 6);
+    /* background-color: rgb(27, 25, 6); */
 }
 
 .signup-container {
