--- a/digiart/src/components/login/style.css
+++ b/digiart/src/components/login/style.css
@@ -34,6 +34,15 @@
     border: none;
 }
 
+.signin-with-google {
+    align-self: center;
+}
+
+.google {
+    margin: 1rem 0;
+    width: 10rem;
+}
+
 .input:focus {
     outline: 2px solid rgb(189, 21, 240);
 }
